basement/04-milvus/01-minio-traefik-middleware.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web3eye-minio-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      default-common-headers@kubernetescrd

spec:
  rules:
    - host: minio.idc.web3eye.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web3eye-minio
                port:
                  number: 9000
